--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:pm2": "next start -p 3000 -H 0.0.0.0",
     "lint": "next lint",
     "deploy": "next start -p 2000"
   },
