--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "proxy": "https://117.254.87.83:8091",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "start:pm2": "next start -p 3000 -H 0.0.0.0",
-    "lint": "next lint",
-    "deploy": "next start -p 2000"
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "start:pm2": "node ./node_modules/next/dist/bin/next start -p 3000 -H 0.0.0.0",
+  "lint": "next lint",
+  "deploy": "next start -p 2000"
+}
+
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
