--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "recompose": "^0.30.0",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+
+    ✅ "lucide-react": "^0.400.0"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
