--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
+    "react-table":"^7.8.0",
     "next": "^12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
