--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.400.0",
     "moment": "^2.29.4",
     "multiselect-react-dropdown": "^2.0.25",
-    "react-table":"^7.8.0",
     "next": "^12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -32,16 +32,17 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
     "recompose": "^0.30.0",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
-    "sharp": "^0.32.1",
-    "lucide-react": "^0.400.0"
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-table": "^7.7.20",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.3"
