--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,20 +1,22 @@
-sonar.projectKey=pde_ui
-sonar.projectName=pde_ui
+# Project identification
+sonar.projectKey=PDE_FRONTEND
+sonar.projectName=PDE_FRONTEND
 sonar.projectVersion=1.0
 
+# Source encoding
 sonar.sourceEncoding=UTF-8
 
-# Directories to scan
+# Source directories
 sonar.sources=.
 
-# Include only UI source code
+# Include only frontend source files
 sonar.inclusions=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx,pages/**/*.js,pages/**/*.tsx
 
-# Exclude non-source directories
+# Exclude non-source folders
 sonar.exclusions=node_modules/**,.next/**,coverage/**,build/**,dist/**,**/*.min.js
 
-# TypeScript support
+# TypeScript configuration
 sonar.typescript.tsconfigPath=tsconfig.json
 
-# Coverage report (if generated)
+# Code coverage (optional – only if lcov is generated)
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
