--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,22 +1,103 @@
-# Project identification
-sonar.projectKey=PDE_FRONTEND
-sonar.projectName=PDE_FRONTEND
-sonar.projectVersion=1.0
+pipeline {
+    agent any
 
-# Source encoding
-sonar.sourceEncoding=UTF-8
+    tools {
+        nodejs "Node16"
+    }
 
-# Source directories
-sonar.sources=.
+    environment {
+        NODEJS_HOME = "/var/lib/jenkins/tools/hudson.plugins.nodejs.NodeJSInstallation/Node16"
+        PATH = "${NODEJS_HOME}/bin:${PATH}"
+    }
 
-# Include only frontend source files
-sonar.inclusions=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx,pages/**/*.js,pages/**/*.tsx
+    stages {
 
-# Exclude non-source folders
-sonar.exclusions=node_modules/**,.next/**,coverage/**,build/**,dist/**,**/*.min.js
+        stage('Checkout Code') {
+            steps {
+                git credentialsId: 'github-cred',
+                    url: 'https://github.com/SantoshKumar9290/PDE_UI.git',
+                    branch: 'main'
+            }
+        }
 
-# TypeScript configuration
-sonar.typescript.tsconfigPath=tsconfig.json
+        stage('Install Dependencies') {
+            steps {
+                sh '''
+                    echo "Node version:"
+                    node -v
+                    npm -v
 
-# Code coverage (optional – only if lcov is generated)
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+                    rm -rf node_modules package-lock.json
+                    npm install --legacy-peer-deps
+                '''
+            }
+        }
+
+        stage('Build UI') {
+            steps {
+                sh 'npm run build'
+            }
+        }
+
+        stage('SonarQube Scan') {
+            steps {
+                withSonarQubeEnv('pde_ui') {
+                    sh '''
+                        sonar-scanner \
+                        -Dsonar.projectKey=pde_ui \
+                        -Dsonar.projectName=pde_ui \
+                        -Dsonar.sources=. \
+                        -Dsonar.language=js \
+                        -Dsonar.sourceEncoding=UTF-8
+                    '''
+                }
+            }
+        }
+
+        stage('Quality Gate') {
+            steps {
+                timeout(time: 2, unit: 'MINUTES') {
+                    waitForQualityGate abortPipeline: true
+                }
+            }
+        }
+
+        stage('Archive Build') {
+            steps {
+                archiveArtifacts artifacts: 'build/**', fingerprint: true
+            }
+        }
+
+        stage('PM2 Deploy') {
+            steps {
+                sh '''
+                    if ! command -v pm2 >/dev/null 2>&1; then
+                        sudo npm install -g pm2
+                    fi
+
+                    pm2 startOrReload ecosystem.config.js || \
+                    pm2 start "npm run start:pm2" --name "pde_ui"
+
+                    pm2 save
+                    pm2 list
+                '''
+            }
+        }
+    }
+
+    post {
+        success {
+            echo "✅ UI Build & Deployment Successful"
+        }
+
+        failure {
+            echo "❌ UI Build or Deployment Failed"
+        }
+
+        always {
+            echo "📌 Job: ${env.JOB_NAME}"
+            echo "📌 Build Number: ${env.BUILD_NUMBER}"
+            echo "📌 Status: ${currentBuild.currentResult}"
+        }
+    }
+}
