--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,103 +1,22 @@
-pipeline {
-    agent any
+# Project identification
+sonar.projectKey=pde_ui
+sonar.projectName=pde_ui
+sonar.projectVersion=1.0
 
-    tools {
-        nodejs "Node16"
-    }
+# Source encoding
+sonar.sourceEncoding=UTF-8
 
-    environment {
-        NODEJS_HOME = "/var/lib/jenkins/tools/hudson.plugins.nodejs.NodeJSInstallation/Node16"
-        PATH = "${NODEJS_HOME}/bin:${PATH}"
-    }
+# Source directories
+sonar.sources=.
 
-    stages {
+# Include only UI source code
+sonar.inclusions=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx,pages/**/*.js,pages/**/*.tsx
 
-        stage('Checkout Code') {
-            steps {
-                git credentialsId: 'github-cred',
-                    url: 'https://github.com/SantoshKumar9290/PDE_UI.git',
-                    branch: 'main'
-            }
-        }
+# Exclude unnecessary folders
+sonar.exclusions=node_modules/**,.next/**,coverage/**,build/**,dist/**,**/*.min.js
 
-        stage('Install Dependencies') {
-            steps {
-                sh '''
-                    echo "Node version:"
-                    node -v
-                    npm -v
+# TypeScript configuration
+sonar.typescript.tsconfigPath=tsconfig.json
 
-                    rm -rf node_modules package-lock.json
-                    npm install --legacy-peer-deps
-                '''
-            }
-        }
-
-        stage('Build UI') {
-            steps {
-                sh 'npm run build'
-            }
-        }
-
-        stage('SonarQube Scan') {
-            steps {
-                withSonarQubeEnv('pde_ui') {
-                    sh '''
-                        sonar-scanner \
-                        -Dsonar.projectKey=pde_ui \
-                        -Dsonar.projectName=pde_ui \
-                        -Dsonar.sources=. \
-                        -Dsonar.language=js \
-                        -Dsonar.sourceEncoding=UTF-8
-                    '''
-                }
-            }
-        }
-
-        stage('Quality Gate') {
-            steps {
-                timeout(time: 2, unit: 'MINUTES') {
-                    waitForQualityGate abortPipeline: true
-                }
-            }
-        }
-
-        stage('Archive Build') {
-            steps {
-                archiveArtifacts artifacts: 'build/**', fingerprint: true
-            }
-        }
-
-        stage('PM2 Deploy') {
-            steps {
-                sh '''
-                    if ! command -v pm2 >/dev/null 2>&1; then
-                        sudo npm install -g pm2
-                    fi
-
-                    pm2 startOrReload ecosystem.config.js || \
-                    pm2 start "npm run start:pm2" --name "pde_ui"
-
-                    pm2 save
-                    pm2 list
-                '''
-            }
-        }
-    }
-
-    post {
-        success {
-            echo "✅ UI Build & Deployment Successful"
-        }
-
-        failure {
-            echo "❌ UI Build or Deployment Failed"
-        }
-
-        always {
-            echo "📌 Job: ${env.JOB_NAME}"
-            echo "📌 Build Number: ${env.BUILD_NUMBER}"
-            echo "📌 Status: ${currentBuild.currentResult}"
-        }
-    }
-}
+# Code coverage (if LCOV is generated)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
