--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI-CD-PM2
+name: CI-CD-Deploy
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
@@ -30,9 +30,14 @@ jobs:
             -Dsonar.sources=. \
             -Dsonar.token=$SONAR_TOKEN
 
-      - name: Deploy Application (PM2)
-        run: |
-          cd /var/www/PDE_UI
-          git pull origin main
-          npm install --legacy-peer-deps
-          pm2 reload ecosystem.config.js --env production
+      - name: Deploy to Server via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: 10.10.120.190
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /var/www/PDE_UI
+            git pull origin main
+            npm install --legacy-peer-deps
+            pm2 reload ecosystem.config.js --env production
