--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI-CD-Deploy
+name: CI-CD
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,9 +28,10 @@ jobs:
           npx sonar-scanner \
             -Dsonar.projectKey=pde_ui \
             -Dsonar.sources=. \
+            -Dsonar.host.url=http://117.201.250.43:9000 \
             -Dsonar.token=$SONAR_TOKEN
 
-      - name: Deploy to Server via SSH
+      - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: 10.10.120.190
