--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,17 +21,19 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Verify SonarQube Connectivity
+        run: curl http://117.250.201.43:9000/api/system/status
+
       - name: SonarQube Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
           npx sonar-scanner \
-            -Dsonar.projectKey=github-actions \
-            -Dsonar.projectName=github-actions \
+            -Dsonar.projectKey=pde_ui \
+            -Dsonar.projectName=pde_ui \
             -Dsonar.sources=. \
-            -Dsonar.host.url=$SONAR_HOST_URL \
-            -Dsonar.token=$SONAR_TOKEN
+            -Dsonar.host.url=http://117.250.201.43:9000 \
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.0
