--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
   "name": "pde_frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
+  "proxy": "https://117.254.87.83:8091",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000",
-    "prod": "npm run build && npm run start"
+    "start": "next start -p 2000",
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
-    "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
+    "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.400.0",
-    "moment": "^2.30.1",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-select": "^5.8.0"
+    "moment": "^2.29.4",
+    "multiselect-react-dropdown": "^2.0.25",
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.4",
+    "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
+    "redux": "^4.2.0",
+    "sass": "^1.55.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "typescript": "^5.3.3"
+    "@types/node": "18.7.21",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-table": "^7.7.20",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.3"
   }
 }
