--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Application
+name: Deploy Frontend Application
 
 on:
   push:
@@ -13,10 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-      - name: Build App
+      - name: Install Dependencies
+        run: npm install --force
+
+      - name: Build Application
         run: npm run build
 
       - name: Deploy to Server
@@ -28,6 +33,6 @@ jobs:
           script: |
             cd /var/www/PDE_UI
             git pull origin main
-            npm install
+            npm install --force
             npm run build
-            pm2 reload ecosystem.config.js --env production
+            pm2 restart PDE-UI || pm2 start npm --name "PDE-UI" -- start
