--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,15 @@
-sonar.projectKey=github-actions
-sonar.projectName=github-actions
-sonar.sources=.
+sonar.projectKey=PDE-FRONTEND
+sonar.projectName=PDE-FRONTEND
+sonar.projectVersion=1.0
+
 sonar.sourceEncoding=UTF-8
+sonar.sources=.
+
+# Include only UI source files
+sonar.inclusions=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx,pages/**/*.js,pages/**/*.tsx
+
+# Exclude non-source directories
+sonar.exclusions=node_modules/**,.next/**,build/**,dist/**,coverage/**,**/*.min.js
+
+# TypeScript support
+sonar.typescript.tsconfigPath=tsconfig.json
