--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+
+    "react-datepicker": "^4.25.0"
   },
   "devDependencies": {
     "@types/node": "18.7.21",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-table": "^7.7.20",
+
+    "@types/react-datepicker": "^4.19.6",
+
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.3"
