--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,23 @@
+# Project identification
 sonar.projectKey=PDE-FRONTEND
 sonar.projectName=PDE-FRONTEND
 sonar.projectVersion=1.0
 
+# Source configuration
+sonar.sources=src,pages
+sonar.inclusions=**/*.js,**/*.jsx,**/*.ts,**/*.tsx
+
+# Exclusions
+sonar.exclusions=node_modules/**,.next/**,build/**,dist/**,coverage/**,public/**
+
+# Encoding
 sonar.sourceEncoding=UTF-8
-sonar.sources=.
 
-# Include only UI source files
-sonar.inclusions=src/**/*.js,src/**/*.jsx,src/**/*.ts,src/**/*.tsx,pages/**/*.js,pages/**/*.tsx
-
-# Exclude non-source directories
-sonar.exclusions=node_modules/**,.next/**,build/**,dist/**,coverage/**,**/*.min.js
-
-# TypeScript support
+# TypeScript
 sonar.typescript.tsconfigPath=tsconfig.json
+
+# SonarQube server
+sonar.host.url=http://10.10.120.20:9000
+
+# ⚠️ DO NOT ADD TOKEN HERE
+# Authentication is handled by Jenkins
