--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
@@ -30,18 +31,15 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
-    "sharp": "^0.32.1",
-
-    "react-datepicker": "^4.25.0"
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.58.1",
     "@types/node": "18.7.21",
     "@types/react": "^18.0.21",
+    "@types/react-datepicker": "^4.19.6",
     "@types/react-dom": "^18.0.6",
     "@types/react-table": "^7.7.20",
-
-    "@types/react-datepicker": "^4.19.6",
-
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.3"
