--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+  "@emotion/react": "^11.11.1",
+  "memoize-one": "^6.0.0",
+  "@floating-ui/dom": "^1.5.0",
+  "use-isomorphic-layout-effect": "^1.1.2",
+
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.27.2",
